# advent-2025

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
advent_2025/: __init__.py  dataset.py  features.py  plots.py
advent_2025/modeling/: predict.py  train.py
advent_2025/solutions/: day1.py  day2.py  day3.py  day4.py  day5.py
advent_2025/utils/: data.py
docs/: mkdocs.yml
docs/docs/: index.md
tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py
